# patchy

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  Create Source.lua  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  pytest.ini  requirements.in  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: main.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
patchy/: __init__.py  api.py  cache.py  patch.py
requirements/: compile.py  compile.sh  py310.txt  py311.txt  py312.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/patchy/: __init__.py  api.py  cache.py
tests/: base.py  conftest.py  py3_nonlocal.py  python2_future.py  test_cache.py  test_patch.py  test_patch_then_unpatch.py  test_patchy.py  test_replace.py  test_replace_substring.py  test_temp_patch.py  test_temp_replace_substring.py  test_unpatch.py
tests/requirements/: py310.txt  py311.txt  py312.txt  py313.txt  py38.txt  py39.txt  requirements.in
