[bdist_wheel]
universal = 1

[flake8]
max_line_length = 120

[isort]
known_first_party = patchy
known_standard_library = mock
line_length = 120
multi_line_output = 5
not_skip = __init__.py

[metadata]
license_file = LICENSE

[tool:multilint]
paths = patchy
        setup.py
        tests

[tool:pytest]
xfail_strict=true
addopts = --cov=patchy
          --cov-report term-missing
          ; --cov-fail-under 100
