[metadata]
name = patchy
version = 2.1.0
description = Patch the inner source of python functions at runtime.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/patchy
project_urls =
    Changelog = https://github.com/adamchainz/patchy/blob/master/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = BSD
keywords = patchy
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
  pkgutil_resolve_name; python_version < "3.9"

python_requires = >=3.5.*
zip_safe = False

[options.packages.find]
where = src

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E203,E501,W503

[isort]
include_trailing_comma = True
force_grid_wrap = 0
known_first_party = patchy
line_length = 88
multi_line_output = 3
use_parentheses = True
